# CIVG

./: CMakeCFlags.txt  CMakeLists.txt  COPYRIGHTS  Doxyfile.in  README  build_for_tizen.sh  build_version.h  civg_version.h  config_example.json  gbs.conf  main_config.c  main_service.c  update_build_version  valgrind.supp  with-helgrind  with-valgrind
modules/: .eproject  (+6 more)
modules/adapter/dbus_adapter/: CMakeLists.txt  com.arynga.CarSync.CIVGAdapter.xml  dbus_adapter.h  object_marshal_pragma.c
modules/adapter/ws_adapter/: CMakeLists.txt  ws_adapter.c  ws_adapter.h
modules/carinfo/dummy_carinfo/: CMakeLists.txt  dummy_carinfo.c  dummy_carinfo_priv.h
modules/core/: CMakeLists.txt  core.c  core.h  core_priv.h  downloaditem.c  downloaditem.h  downloadmgr.c  downloadmgr.h  downloadmgr_priv.h  vbsclient.c  vbsclient.h
modules/core/tests/: CMakeLists.txt  core_tests.c  core_tests.h  downloaditem_tests.c  downloaditem_tests.h  downloadmgr_tests.c  downloadmgr_tests.h  test.uf  vbsclient_tests.c  vbsclient_tests.h
modules/core/tests/test_downloader/: CMakeLists.txt  test_downloader.c  test_downloader.h
modules/core/tests/test_rpmanager/: CMakeLists.txt  test_rpmanager.c  test_rpmanager.h
modules/core/tests/test_transport/: CMakeLists.txt  test_transport.c  test_transport.h
modules/dispatcher/glib_dispatcher/: CMakeLists.txt  glib_dispatcher.c  glib_dispatcher.h
modules/dispatcher/glib_dispatcher/tests/: CMakeLists.txt  glib_dispatcher_tests.c  glib_dispatcher_tests.h
modules/downloader/dumm_downloader/: CMakeLists.txt  dumm_downloader.c  dumm_downloader.h
modules/downloader/dumm_downloader/dumm/: .gitignore  Includes.am  Makefile.am  README  __compile.sh  configure.ac
modules/downloader/dumm_downloader/dumm/client/: client-dumm-bus.c  client-dumm-bus.h  client-main.c
modules/downloader/dumm_downloader/dumm/debian/: changelog  control
modules/downloader/dumm_downloader/dumm/gdbus/: client.c  gdbus.h  mainloop.c  object.c  polkit.c  watch.c
modules/downloader/dumm_downloader/dumm/html-demo/: README  content.html  index.html
modules/downloader/dumm_downloader/dumm/html-demo/css/: style.css
modules/downloader/dumm_downloader/dumm/html-demo/js/: dbus.js  demo.js
modules/downloader/dumm_downloader/dumm/packaging/: debian.changelog  debian.control  debian.rules
modules/downloader/dumm_downloader/dumm/src/: curl-httpheaders.cpp  curl-httpheaders.h  curl-wrapper.cpp  curl-wrapper.h  files.cpp  files.h  impl_db.cpp  impl_db.h  main.cpp  mgr-commoni.h  mgr-download.cpp  mgr-download.h  mgr-downloadi.h  mgr-upload.cpp  mgr-upload.h  mgr-uploadi.h  obj-common.cpp  obj-common.h  obj-download.cpp  obj-download.h  obj-upload.cpp  obj-upload.h  openrnd-exceptions.cpp  openrnd-exceptions.h  openrnd-mutex.cpp  openrnd-mutex.h  thbc.cpp  thbc.h
modules/downloader/dumm_downloader/dumm/tests/AdvancedServer/: http_server.py
modules/downloader/dumm_downloader/dumm/tests/SimpleHttpd/: simple-server.py
modules/downloader/dumm_downloader/dumm/tests/scripts/: curl_put.sh
modules/downloader/dumm_downloader/dumm/xml/: net.dumm.download.dm.xml  net.dumm.download.xml
modules/downloader/dumm_downloader/tests/: CMakeLists.txt  dumm_downloader_tests.c  dumm_downloader_tests.h
modules/proto/: CMakeLists.txt  proto.c  proto.h
modules/proto/sapi/: .gitignore  Makefile.am  autogen.sh  configure.ac
modules/proto/sapi/c/: Makefile.am  carsync-hu-proto-c.pc.in  carsync-hu-south-proto-utils.h  carsync-hu-south-proto.h  utils.c
modules/proto/sapi/cpp/: Makefile.am  carsync-hu-proto-cpp.pc.in  carsync-hu-south-proto-utils.hpp  carsync-hu-south-proto.hpp  utils.cpp
modules/proto/sapi/debian/: changelog  rules
modules/proto/sapi/erlang/: Makefile.am
modules/proto/sapi/packaging/: debian.changelog  debian.control  libcarsync-south-proto.spec
modules/proto/sapi/proto/: common.proto  releasepackage.proto  southapi.proto
modules/proto/sapi/python/: Makefile.am
modules/proto/sapi/test/: Makefile.am  README  client.py  dumpupdatefile.py  genupdatefile.py  qdelete.py  qdrain.py  server-notify.py  server-report.py  server-rpc.py  tar-test.cpp
modules/proto/sapi/test/client/rpc/: config_report.py
modules/proto/sapi/test/rmqwrap/: __init__.py  client.py  common.py  server.py
modules/proto/sapi/test/server/notify/: notif_conf_req.py
modules/proto/sapi/test/server/report/: report.py
modules/proto/sapi/test/server/rpc/: configuration.py
modules/proto/tests/: CMakeLists.txt  proto_tests.c  proto_tests.h
modules/rpmanager/: CMakeLists.txt  imagehandler.h  rpmanager.c  rpmanager.h  rpmanager_priv.h
modules/rpmanager/basic_imagehandler/: CMakeLists.txt  basic_imagehandler.c
modules/rpmanager/basic_imagehandler/tests/: CMakeLists.txt  basic_imagehandler_tests.c  basic_imagehandler_tests.h
modules/rpmanager/tests/: CMakeLists.txt  ivi4-demo-wrong.patch  rpmanager_tests.c  rpmanager_tests.h
modules/transport/rmq_transport/: CMakeLists.txt  rmq_config.c  rmq_config.h  rmq_config_priv.h  rmq_consumer.c  rmq_consumer.h  rmq_producer.c  rmq_tools.h
modules/transport/rmq_transport/tests/: CMakeLists.txt  rmq_transport_tests.c  rmq_transport_tests.h
modules/transport/rvi_transport/: CMakeLists.txt  rvi_config.c  rvi_config.h  rvi_config_priv.h  rvi_consumer.c  rvi_producer.c  rvi_tools.c  rvi_tools.h
modules/transport/tests/: CMakeLists.txt  msgqueue_tests.c  msgqueue_tests.h  threaded_transport_tests.c  threaded_transport_tests.h
modules/transport/tests/test_threaded_transport/: CMakeLists.txt  test_config.c  test_config.h  test_consumer.c  test_consumer.h  test_producer.c  test_producer.h
modules/utils/: CMakeLists.txt  civg_compiler.h  config.h  filetools.h  logger.h  strtools.c  strtools.h
modules/utils/config/: config.c
modules/utils/config/tests/: CMakeLists.txt  config_tests.c  config_tests.h
modules/utils/filetools/: filetools.c
modules/utils/filetools/tests/: CMakeLists.txt  filetools_tests.c  filetools_tests.h  test.file  test.tar
modules/utils/logger/: logger.c
modules/utils/tests/: CMakeLists.txt  strtools_tests.c  strtools_tests.h
(+27 files in other folders)
