# Arynga CarSync(TM)
# 2014 Copyrights by Arynga Inc. All rights reserved.
# Unauthorized copying of this file, via any medium is strictly prohibited
# Proprietary and confidential

SUBDIRS =

if BUILD_CPP
SUBDIRS += cpp
endif

if BUILD_PYTHON
SUBDIRS += python
endif

if BUILD_C
SUBDIRS += c
endif

if BUILD_ERLANG
SUBDIRS += erlang
endif

SUBDIRS += test
